--- a/style/style.css
+++ b/style/style.css
@@ -63,8 +63,9 @@ body {
   font-family: "Karla", sans-serif;
   font-weight: 400;
   color: white;
-  display: grid;
-  place-items: center;
+ min-height: 100vh;
+display: grid;
+place-items: center;
 }
 body main .container {
   background-color: white;
